# OnsagerNet--1

./: .gitignore  README.md  requirements.txt  setup.cfg
docs/source/: conf.py  index.rst
examples/: DNA_demo.ipynb  DNA_demo_constant_diagonal-Copy1.ipynb  ReadMe.md  lorenz_demo.ipynb  sde_lorenz.ipynb  sde_lorenz_complex.ipynb  sde_toy1d.ipynb  weak.ipynb  weather_demo.ipynb
examples/lorenz_data/: Lorenz_sde.npz  ReadMe.md  data_generator.py
src/onetlib/: generators.py  initializers.py  layers.py  onsagernet.py  utils.py
