[metadata]
name = onsagernet
version = 0.0.0
license = MIT
description = OnsagerNet
long_description = file: README.md
author = Qianxiao Li
author_email = qianxiao@nus.edu.sg
classifiers=
    Development Status :: 1 - Planning

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    tensorflow
    scipy
    pyyaml
    tqdm

[options.packages.find]
where=src